Istio/02-Traffic_management/11-TLS-PASSTHROUGH/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
    service: helloworld
spec:
  ports:
    - name: https
      port: 8443
      targetPort: 443
      protocol: TCP
      appProtocol: HTTPS
  selector:
    app: helloworld
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-nginx
  labels:
    app: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: oriolfilter/https-nginx-demo
          resources:
            requests:
              cpu: "100m"
          imagePullPolicy: Always #Always
          ports:
            - containerPort: 80
            - containerPort: 443
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: nginx
#  labels:
#    app: nginx
#    version: v1
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: nginx
#      version: v1
#  template:
#    metadata:
#      labels:
#        app: nginx
#        version: v1
#    spec:
#      #      serviceAccountName: istio-helloworld
#      containers:
#        - name: nginx
#          image: nginx
#          resources:
#            requests:
#              cpu: "100m"
#          imagePullPolicy: IfNotPresent
#          ports:
#            - containerPort: 80
